--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					<p class="title">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
 					<p class="title">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
 					<ul class="about-features">
-						<li>Деловые Линии</li>
+						<li>Деловые Линии<br></li>
 						<li>Автотрейдинг</li>
 						<li>ЖилДорЭкспедиция</li>
 					</ul>
@@ -212,7 +212,7 @@
 				</div>
 				<div class="footer-middle">
 					<p>г. Москва, ул. Строителей, 15</p>
-					<ul class="footer-nav">
+					<ul class="footer-main-nav">
 							<li><a href="#">Доставка</a></li>
 							<li><a href="#">Гарантия</a></li>
 							<li><a href="#">Контакты</a></li>
