--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
 				<h3 class="filter-title">Фильтр:</h3>
 				<h3 class="sorting-title">Сортировка:</h3>
 				<ul class="sorting-options">
-					<li class="sorting-option"><a href="#">По цене</a></li>
+					<li class="sorting-option"><a class="checked" href="#">По цене</a></li>
 					<li class="sorting-option"><a href="#">По типу</a></li>
 					<li class="sorting-option"><a href="#">По популярности</a></li>
 				</ul>
@@ -89,20 +89,20 @@
 							</fieldset>
 							<fieldset class="color">
 								<legend>Цвет</legend>
-								<input type="checkbox" name="black" id="black">
-								<label for="black">Черный</label>
+								<input type="checkbox" checked name="black" id="black">
+								<label for="black" checked>Черный</label>
 								<input type="checkbox" name="white" id="white">
 								<label for="white">Белый</label>
-								<input type="checkbox" name="blue" id="blue">
+								<input type="checkbox" checked name="blue" id="blue">
 								<label for="blue">Синий</label>
-								<input type="checkbox" name="red" id="red">
+								<input type="checkbox" checked name="red" id="red">
 								<label for="red">Красный</label>
 								<input type="checkbox" name="pink" id="pink">
 								<label for="pink">Розовый</label>
 							</fieldset>
 							<fieldset class="bluetooth">
 								<legend>Bluetooth</legend>
-								<input type="radio" name="bluetooth" value="yes" id="bt-yes">
+								<input type="radio" checked name="bluetooth" value="yes" id="bt-yes">
 								<label for="bt-yes">Есть</label>
 								<input type="radio" name="bluetooth" value="no" id="bt-no">
 								<label for="bt-no">Нет</label>
@@ -169,7 +169,7 @@
 						</div>
 						<ul class="paginator">
 							<li class="prev"><a href="#prev">Назад</a></li>
-							<li class="page current"><a>1</a></li>
+							<li class="page"><a class="current">1</a></li>
 							<li class="page"><a href="#">2</a></li>
 							<li class="page"><a href="#">3</a></li>
 							<li  class="next"><a href="#next">Вперёд</a></li>
