--- a/index.html
+++ b/index.html
@@ -229,5 +229,17 @@
 				</div>
 			</div>
 		</footer>
+		<div class="modal-content">
+			<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+			<form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+				<label for="name">Ваше имя:</label>
+				<label for="email">Ваш e-mail:</label>
+				<input type="text" class="your-name" id="name" name="your-name" placeholder="Представьтесь, пожалуйcта">
+				<input type="email" class="your-email" id="email" name="your-email" placeholder="Для отправки ответа">
+				<label for="letter">Текст письма:</label>
+				<textarea class="your-letter" id="letter" name="your-letter" placeholder="В свободной форме"></textarea>
+				<button class="btn" type="submit">Отправить</button>
+			</form>
+		</div>
 	</body>
 </html>
