--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 				<div class="contacts">
 					<h2 class="caption">Контакты</h2>
 					<p class="title">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-					<a href="#"><img class="map" src="img/map.jpg" width="560" height="222" alt="Я карта"></a>  
+					<a class="map-show" href="#"><img class="map" src="img/map.jpg" width="560" height="222" alt="Я карта"></a>  
 					<a class="btn" href="#">Напишите нам</a>
 				</div>
 			</div>
@@ -229,6 +229,10 @@
 				</div>
 			</div>
 		</footer>
+		<div class="modal-map">
+			<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.130637692005!2d37.52937123525483!3d55.68671648407113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1494245609756" width="960" height="559" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
 		<div class="modal-content">
 			<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
 			<form class="write-us" action="https://echo.htmlacademy.ru" method="post">
@@ -241,5 +245,32 @@
 				<button class="btn" type="submit">Отправить</button>
 			</form>
 		</div>
+		<script>
+			var link = document.querySelector(".contacts .btn");
+			var popup = document.querySelector(".modal-content");
+			var close = document.querySelector(".modal-content .modal-content-close");
+			
+			link.addEventListener("click", function (evt) {
+				evt.preventDefault();
+				popup.classList.add("modal-content-show");
+			});
+			close.addEventListener("click", function (evt) {
+				evt.preventDefault();
+				popup.classList.remove("modal-content-show");
+			});
+			
+			var mapLink = document.querySelector(".map-show");
+			var mapPopup = document.querySelector(".modal-map");
+			var mapClose = document.querySelector(".modal-map .modal-content-close");
+			
+			mapLink.addEventListener("click", function (evt) {
+				evt.preventDefault();
+				mapPopup.classList.add("modal-map-show");
+			});
+			mapClose.addEventListener("click", function (evt) {
+				evt.preventDefault();
+				mapPopup.classList.remove("modal-map-show");
+			});
+		</script>
 	</body>
 </html>
