--- a/catalog.html
+++ b/catalog.html
@@ -19,9 +19,10 @@
 						<input type="submit" value="Найти">
 					</form>
 					<ul class="user-nav">    
-						<li><a class="login" href="#">Валентин Петухов</a><a class="exit" href="#">Выйти</a></li>
-						<li><a class="сompare" href="#">Сравнить</a></li>
-						<li><a class="basket" href="#">Корзина</a></li>
+						<li class="login"><a href="#">Валентин Петухов</a></li>
+						<li class="logout"><a href="#">Выйти</a></li>
+						<li class="сompare"><a href="#">Сравнить</a></li>
+						<li class="basket"><a href="#">Корзина</a></li>
 					</ul>
 				</div>
 				<nav class="main-nav">
