--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
 							<fieldset class="color">
 								<legend>Цвет</legend>
 								<input type="checkbox" checked name="black" id="black">
-								<label for="black" checked>Черный</label>
+								<label for="black">Черный</label>
 								<input type="checkbox" name="white" id="white">
 								<label for="white">Белый</label>
 								<input type="checkbox" checked name="blue" id="blue">
