--- a/catalog.html
+++ b/catalog.html
@@ -14,27 +14,27 @@
 					<a href="index.html"><img src="img/logo.png" width="164" height="36" alt="device"></a>
 				</div>
 				<div class="user-block">
-					<form class="user-search" action="https://echo.htmlacademy.ru" method="get" >
-						<input type="search" name="search" placeholder="Поиск по сайту"> 
+					<form class="user-search" action="https://echo.htmlacademy.ru" method="get">
+						<input type="search" name="search" placeholder="Поиск по сайту">
 						<input type="submit" value="Найти">
 					</form>
-					<ul class="user-nav">    
+					<ul class="user-nav">
 						<li class="login"><a href="#">Валентин Петухов</a></li>
 						<li class="logout"><a href="#">Выйти</a></li>
-						<li class="сompare"><a href="#">Сравнить</a></li>
+						<li class="compare"><a href="#">Сравнить</a></li>
 						<li class="basket"><a href="#">Корзина</a></li>
 					</ul>
 				</div>
 				<nav class="main-nav">
 					<ul class="main-menu">
-						<li class="catalog"><a href="catalog.html">Каталог товаров</a>
+						<li class="catalog"><a>Каталог товаров</a>
 							<ul class="catalog-nav">
 								<li><a href="#">Виртуальная реальность</a></li>
 								<li><a href="#">Фитнес-браслеты</a></li>
 								<li><a href="#">Квардрокоптеры</a></li>
-								<li><a href="catalog.html">Моноподы для селфи</a></li>
+								<li><a>Моноподы для селфи</a></li>
 								<li><a href="#">Умные часы</a></li>
-								<li><a href="#">Экшн-камеры</a></li>        
+								<li><a href="#">Экшн-камеры</a></li>
 							</ul>
 						</li>
 						<li class="menu-delivery"><a href="#">Доставка</a></li>
@@ -42,7 +42,7 @@
 						<li class="menu-contacts"><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
-			</div>               
+			</div>
 		</header>
 		<div class="container title">
 			<h1 class="breadcrumbs-title">Моноподы для селфи</h1>
@@ -71,13 +71,11 @@
 					<section class="filter-form">
 						<form action="https://echo.htmlacademy.ru" method="get">
 							<fieldset class="price-range">
-								<div class="filter-range-title">
-									Стоимость
-								</div>
+								<div class="filter-range-title">Стоимость</div>
 								<div class="range-controls">
-										<div class="scale">
-											<div class="bar"></div>
-										</div>
+									<div class="scale">
+										<div class="bar"></div>
+									</div>
 									<div class="toggle toggle-min"></div>
 									<div class="toggle toggle-max"></div>
 								</div>
@@ -137,7 +135,7 @@
 									</ul>
 								</div>
 								<div class="item-feature">
-									<a href="#" class="item-name">Профессиональная<br> селфи-палка</a>
+									<a href="#" class="item-name">Профессиональная селфи-палка</a>
 									<span class="price">1 500 руб.</span>
 								</div>
 							</div>
@@ -163,7 +161,7 @@
 									</ul>
 								</div>
 								<div class="item-feature">
-									<a href="#" class="item-name">Селфи-палка &laquo;Следуй за<br> мной&raquo;</a>
+									<a href="#" class="item-name">Селфи-палка &laquo;Следуй за мной&raquo;</a>
 									<span class="price">4 900 руб.</span>
 								</div>
 							</div>
@@ -173,30 +171,30 @@
 							<li class="page"><a class="current">1</a></li>
 							<li class="page"><a href="#">2</a></li>
 							<li class="page"><a href="#">3</a></li>
-							<li  class="next"><a href="#next">Вперёд</a></li>
+							<li class="next"><a href="#next">Вперёд</a></li>
 						</ul>
 					</div>
 				</section>
 			</div>
 		</main>
 		<footer class="footer">
-			<div class="container">  
+			<div class="container">
 				<div class="footer-top">
 					<div class="footer-logo">
 						<a href="index.html"><img src="img/logo-footer.png" width="163" height="36" alt="device"></a>
 					</div>
-					<ul class="footer-nav">    
+					<ul class="footer-nav">
 						<li><a class="login" href="#">Войти</a></li>
 						<li><a class="сompare" href="#">Сравнить</a> </li>
 						<li><a class="basket" href="#">Корзина</a></li>
-					</ul>    
+					</ul>
 				</div>
 				<div class="footer-middle">
 					<p>г. Москва, ул. Строителей, 15</p>
 					<ul class="footer-main-nav">
-							<li><a href="#">Доставка</a></li>
-							<li><a href="#">Гарантия</a></li>
-							<li><a href="#">Контакты</a></li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Гарантия</a></li>
+						<li><a href="#">Контакты</a></li>
 					</ul>
 					<p>Тел.: +7 (495) 495-95-95</p>
 				</div>
@@ -206,7 +204,7 @@
 						<a class="social-btn" href="https://instagram.com/">Инстаграм</a>
 						<a class="social-btn" href="https://twitter.com/">Твиттер</a>
 					</div>
-					<a class="htmlacademy" href="https://htmlacademy.ru/"><img src="img/htmlacademy.png" width="27" height="34" alt="htmlacademy"></a>
+					<a class="htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy</a>
 				</div>
 			</div>
 		</footer>
