--- a/catalog.html
+++ b/catalog.html
@@ -118,7 +118,7 @@
 									<img class="card-img" src="img/easy-selfie.jpg" width="360" height="380" alt="Любительская селфи-палка">
 									<ul class="item-nav">
 										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a class="compare" href="#">Добавить к сравнению</a></li>
+										<li><a class="compare-item" href="#">Добавить к сравнению</a></li>
 									</ul>
 								</div>
 								<div class="item-feature">
@@ -131,7 +131,7 @@
 									<img class="card-img" src="img/pro-selfie.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
 									<ul class="item-nav">
 										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a class="compare" href="#">Добавить к сравнению</a></li>
+										<li><a class="compare-item" href="#">Добавить к сравнению</a></li>
 									</ul>
 								</div>
 								<div class="item-feature">
@@ -144,7 +144,7 @@
 									<img class="card-img" src="img/underwater-selfie.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
 									<ul class="item-nav">
 										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a class="compare" href="#">Добавить к сравнению</a></li>
+										<li><a class="compare-item" href="#">Добавить к сравнению</a></li>
 									</ul>
 								</div>
 								<div class="item-feature">
@@ -157,7 +157,7 @@
 									<img class="card-img" src="img/hand-selfie.jpg" width="360" height="380" alt="Селфи-палка Следуй за мной">
 									<ul class="item-nav">
 										<li><a class="btn" href="#">В корзину</a></li>
-										<li><a class="compare" href="#">Добавить к сравнению</a></li>
+										<li><a class="compare-item" href="#">Добавить к сравнению</a></li>
 									</ul>
 								</div>
 								<div class="item-feature">
@@ -185,7 +185,7 @@
 					</div>
 					<ul class="footer-nav">
 						<li><a class="login" href="#">Войти</a></li>
-						<li><a class="сompare" href="#">Сравнить</a> </li>
+						<li><a class="compare" href="#">Сравнить</a> </li>
 						<li><a class="basket" href="#">Корзина</a></li>
 					</ul>
 				</div>
