--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					</div>
 					<ul class="footer-nav">
 						<li><a class="login" href="#">Войти</a></li>
-						<li><a class="сompare" href="#">Сравнить</a> </li>
+						<li><a class="compare" href="#">Сравнить</a> </li>
 						<li><a class="basket" href="#">Корзина</a></li>
 					</ul>
 				</div>
